# KnowledgeTransfer

./: .env  .gitignore  README.md  STEP_BY_STEP_GUIDE.md  auth.py  check_setup.py  check_users.py  create_pinecone_index.py  doc_metadata.json  document_store.py  gemini_utils.py  landing_page.py  main.py  migration_add_detailed_summary.sql  package-lock.json  package.json  password_reset_tokens.json  pyproject.toml  requirements.txt  supabase_config.py  supabase_schema.sql  team_store.py  teams.json  theme.py  tsconfig.json  user_store.py  vector_store.py  verify_clean_setup.py
